<resources>
    <string name="app_name">WinspireGo</string>
    <string name="action_settings">Settings</string>

    <string name="winspire_name">Winspire Magazine</string>
    <string name="winspire_logo">Winspire Logo</string>

    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Continue">Continue as a Guest</string>

    <string name="activity_images">Activity Images</string>
    <string name="icons_images">Icons Images</string>

    <string name="user_image">user_image</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>

    <string name="Motivation">Motivation</string>
    <string name="Topic_of_the_Day">Topic of the Day</string>
    <string name="Puzzle">Puzzle</string>
    <string name="General_Knowledge">General Knowledge</string>
    <string name="Poll">Poll</string>
    <string name="Extra">Extra</string>

    <string name="Personalization">Personalization</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="reach_us">Reach Us</string>
    <string name="About_us">About Us</string>
    <string name="about_app">About APP</string>
    <string name="Share">Share</string>

    <string name="fragment_img">fragment image</string>
    <string name="Moti_Descrip">Motivation Description</string>
    <string name="Topic_Descrip">Topic of the Day Description</string>
    <string name="Puzzle_Question">Puzzle Question</string>
    <string name="GK_Question">General Knowledge Question</string>
    <string name="GK_Descrip">General Knowledge Description / Solution</string>

    <string name="Option_1GK">Option 1</string>
    <string name="Option_2GK">Option 2</string>
    <string name="Option_3GK">Option 3</string>
    <string name="Option_4GK">Option 4</string>
    <string name="Submit_GK">Submit</string>

    <string name="Option_1Puzzle">Option 1</string>
    <string name="Option_2Puzzle">Option 2</string>
    <string name="Option_3Puzzle">Option 3</string>
    <string name="Option_4Puzzle">Option 4</string>
    <string name="Submit_Puzzle">Submit</string>

    <string name="Menu">Activity Menu</string>

    <string name="Google_Name">Google User Name</string>
    <string name="Google_Email">Google User Email ID</string>
    <string name="Not_This">Not This Account</string>
    <string name="Get_Google">Get Your Google Id Details</string>
    <string name="Get_Facebook">Get Your Facebook Id Details</string>
    <string name="Login_Text">Login Page Text</string>

    <string name="share_content">Hey there! Take a look at the app.Here is the link to the app:</string>
    <string name="share_link">https://www.google.co.in</string>
    <string name="enjoy_share_content">Steps: click on install and enjoy.</string>

    <string name="facebook_app_id">939341479588507</string>
    <string name="fb_login_protocol_scheme">fb939341479588507</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_emailid_field_required">This emailId field is required</string>
    <string name="error_mobile_field_required">This Mobile No. field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_Mobile">This Mobile Number is incorrect</string>
    <string name="error_invalid_Name">This Name is invalid</string>
    <string name="error_invalid_School">Please Enter Valid School Name</string>
    <string name="error_invalid_Class">Please Enter Valid Class Details</string>

    <string-array name="SpinnerItems">
        <item>I am a Student</item>
        <item>I am a Parent</item>
        <item>I am a Principal / Headmaster</item>
        <item>School</item>
        <item>Librarian</item>
        <item>Others</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="Date_Picker">Date Picker</string>

    <string name="Cat_ToDo_Title">Plan Your Day… Every Day</string>
    <string name="Cat_ToDo_Des">What Is Your Plan for Today?</string>
    <string name="Cat_Moti_Title">Daily Kickstart</string>
    <string name="Cat_Moti_Des">Kickstart your day with the best motivational and inspiring thoughts from great minds.</string>
    <string name="Cat_SPDM_Title">Speed Math</string>
    <string name="Cat_SPDM_Des">Test and exercise your brain in 150 seconds with speed math everyday.</string>
    <string name="Cat_Word_Title">Word Coach</string>
    <string name="Cat_Word_Des">Build and improve your vocabulary\nwith 5 words everyday .</string>
    <string name="Cat_Puzzle_Title">Brain Teasers</string>
    <string name="Cat_Puzzle_Des">Get smarter and improve your competence by solving one puzzle everyday.</string>
    <string name="Cat_GK_Title">GK Digest</string>
    <string name="Cat_GK_Des">Improve your overall General Knowledge\nwith 5 questions everyday.</string>
    <string name="Cat_TofW_Title">Top Picks Of The Week</string>
    <string name="Cat_TofW_Des">Helps students to prepare for competitive exams, refreshing the concepts and boosts confidence.</string>

    <string name="TitleReminder">Reminder Title</string>
    <string name="ContentReminder">Reminder Content</string>
    <string name="DefaultDate">Default Date</string>
    <string name="DefaultTime">Default Time</string>

    <string name="WPTitle">dapper [ DAP-er ]</string>
    <string name="WPMeaning">[adjective] \nMEANING: \n1. stylish \n2. neat or smartly dressed \n3. lively or energetic</string>
    <string name="WPExample">
        USAGE EXAMPLE 1: \nThe dapper outfit he wore won him the title of promenade king.
        \nUSAGE EXAMPLE 2: \nThe world number two did not disappoint the crowd as he emerged wearing a dapper new warm up outfit with a gold trimmed jacket and two toned shoes.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior" />
</resources>
